# simplestorage

./: docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/controllers/: auth_controller.py  category_controller.py  product_controller.py  size_controller.py  user_controller.py
backend/app/core/: config.py  constants.py
backend/app/core/cache/: redis.py
backend/app/core/database/: postgresql.py
backend/app/core/security/: create_admin_user.py  dependencies.py  jwt.py
backend/app/core/seed/: seed_data.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 326842da8b92_add_sizes_and_product_sizes_tables.py  355b9f7dc7dd_add_is_admin_remove_is_superuser_is_.py  6948ed647650_add_sequence_for_size_display_order.py  a2224e014f76_size_display_order_autoincrement.py  e11977f2cfd7_product_and_category_add.py
backend/app/models/: __init__.py  category.py  product.py  product_size.py  size.py  user.py
backend/app/repositories/: category_repository.py  product_repository.py  product_size_repository.py  size_repository.py  user_repository.py
backend/app/schemas/: category.py  product.py  product_size.py  size.py  user.py
backend/app/services/: auth_service.py  category_service.py  product_service.py  product_size_service.py  size_service.py  user_service.py
backend/app/utils/: error_handler.py  exception.py  file_handler.py
frontend/: .dockerignore  .gitignore  Dockerfile  package.json
frontend/components/: Header.tsx  Sidebar.tsx
frontend/lib/: api.ts  (+3 more)
(+6 files in other folders)
